--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -8,11 +8,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Overview of the project:\n"
+   ]
   },
   {
    "cell_type": "code",
