Added paper summary, first go at structure model

--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -19,7 +19,9 @@
     "3. Fit the model to the data\n",
     "4. Evaluate the model\n",
     "5. Improve through experimentation\n",
-    "6. Save and reload your trained model"
+    "6. Save and reload your trained model\n",
+    "\n",
+    "The paper that is implemented: [Deep Residual Learning for Image Recognition (ResNet)](https://arxiv.org/pdf/1512.03385.pdf)"
    ]
   },
   {
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,10 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -188,11 +192,256 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Build the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I'll deconstruct and try to explain the model in pseudocode. So that the model can be build afterwards:\n",
+    "### Figure 2\n",
+    "Firstly in Figure 2 in the paper the Residual learning block is being shown:\n",
+    "\n",
+    "![image.png](material\\figure_2_residual_block.png)\n",
+    "\n",
+    "Here `x` is the input image.  \n",
+    "The weight layer is probably a Convolutional Layer  \n",
+    "After the second weight layer there is a \"shortcut connection\".  \n",
+    "Here the input for the building block will be added element-wise to the output of the second weight layer in the building block as discussed in [3.2. Identity Mapping by Shortcuts](https://arxiv.org/pdf/1512.03385.pdf)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [3.3. Network Architectures](https://arxiv.org/pdf/1512.03385.pdf)\n",
+    "\n",
+    "#### Plain Network\n",
+    "\n",
+    "The convolutional layers mostly have 3x3 filters (kernel_size=3).  \n",
+    "\n",
+    "**The 2 design rules are:**\n",
+    "1. The number of filters in conv layer stays the same with the output feature map size (HxW), until the output feature map size changes\n",
+    "2. The number of filters are doubled when the feature map size is halved\n",
+    "\n",
+    "**Downsampling** is performed by using a convolutional layer with stride 2.\n",
+    "\n",
+    "The end of the network has an AveragePool Layer -> nn.Linear(out_features=1000) -> Softmax()\n",
+    "\n",
+    "#### Residual Network\n",
+    "The building block can be directly executed when the input and output are of the same dimensions.  \n",
+    "\n",
+    "![solid_line_shortcut.png](material\\shortcut_connection.png)\n",
+    "\n",
+    "When the output feature map size changes there are 2 ways of performing the shortcut:\n",
+    "1. It does the same as above\n",
+    "2. It performs the equation below to match the dimensions using 1x1 convolutions.\n",
+    "\n",
+    "![equation_2.png](material\\equation_2.png)\n",
+    "\n",
+    "For both options, when the shortcut go across feature maps of 2 different sizes, they are performed with a stride of 2.\n",
+    "\n",
+    "![dotted_line_shortcut.png](material\\shortcut_dotted_connection.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 Implementation\n",
+    "The image is resized with its shorter side randomly sampled in [256, 480] for scale augmentation.  \n",
+    "This would probably be:  \n",
+    "\n",
+    "`If shortside == W:  `  \n",
+    "`    torchvision.transforms.Resize(H, random.sample([256, 480]))`\n",
+    "\n",
+    "\n",
+    "After each conv layer there is a Batch Normalization Layer and then a activation layer.  \n",
+    "So conv_layer -> BN -> ReLU\n",
+    "\n",
+    "There is a weight initialization that's being used, but I'll have to research that more.\n",
+    "\n",
+    "For a loss function they'll be using the SGD with an lr=0.1, weight decay of 0.0001, momentum of 0.9.  \n",
+    "There is no Dropout being used."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch import nn\n",
+    "\n",
+    "\n",
+    "class ConvBlock(nn.Module):\n",
+    "    \"\"\"\n",
+    "    The building block for the Residual connection in ResNet.\n",
+    "    Figure 2. (https://arxiv.org/pdf/1512.03385.pdf)\n",
+    "    \"\"\"\n",
+    "    def __init__(self,\n",
+    "                 in_channels,\n",
+    "                 hidden_units,\n",
+    "                 out_channels,\n",
+    "                 device,\n",
+    "                 stride=1):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.conv_block = nn.Sequential(\n",
+    "            # This is the first conv layer in the building block\n",
+    "            nn.Conv2d(in_channels=in_channels,\n",
+    "                      out_channels=hidden_units,\n",
+    "                      kernel_size=3,\n",
+    "                      stride=stride), # Stride can be adjusted if residual connection is taken place.\n",
+    "\n",
+    "            nn.BatchNorm2d(num_features=hidden_units,\n",
+    "                           device=device),\n",
+    "            nn.ReLU(),\n",
+    "            \n",
+    "            # This is the second conv layer in the building block\n",
+    "            nn.Conv2d(in_channels=hidden_units,\n",
+    "                      out_channels=out_channels,\n",
+    "                      kernel_size=3),\n",
+    "\n",
+    "            nn.BatchNorm2d(num_features=out_channels) #TODO: Not sure if the BN should be here or in ResNet18 class \n",
+    "            )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        output = self.conv_block(x) + x\n",
+    "        return nn.ReLU(output)\n",
+    "\n",
+    "\n",
+    "class Resnet18(nn.Module):\n",
+    "    def __init__(self, \n",
+    "                 in_channels=3,\n",
+    "                 device=\"cuda\"):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.conv_1 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=in_channels,\n",
+    "                      out_channels=64,\n",
+    "                      kernel_size=7,\n",
+    "                      stride=2)\n",
+    "        )\n",
+    "\n",
+    "        self.conv_2 = nn.Sequential(\n",
+    "\n",
+    "            nn.MaxPool2d(kernel_size=3,\n",
+    "                         stride=2),\n",
+    "\n",
+    "            ConvBlock(in_channels=64,\n",
+    "                      hidden_units=64,\n",
+    "                      out_channels=64,\n",
+    "                      stride=2,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=64,\n",
+    "                      hidden_units=64,\n",
+    "                      out_channels=64,\n",
+    "                      device=device), #TODO: Check if the output size of this \n",
+    "\n",
+    "            ConvBlock(in_channels=64,\n",
+    "                      hidden_units=64,\n",
+    "                      out_channels=64,\n",
+    "                      device=device)\n",
+    "        )\n",
+    "\n",
+    "        self.conv_3 = nn.Sequential(\n",
+    "            ConvBlock(in_channels=128, #TODO: Check wether the in_channels should be the same as the out_channels of the previous conv_x\n",
+    "                      hidden_units=128,\n",
+    "                      out_channels=128,\n",
+    "                      stride=2,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=128,\n",
+    "                      hidden_units=128,\n",
+    "                      out_channels=128,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=128,\n",
+    "                      hidden_units=128,\n",
+    "                      out_channels=128,\n",
+    "                      device=device),\n",
+    "\n",
+    "            ConvBlock(in_channels=128,\n",
+    "                      hidden_units=128,\n",
+    "                      out_channels=128,\n",
+    "                      device=device)\n",
+    "        )\n",
+    "\n",
+    "        self.conv_4 = nn.Sequential(\n",
+    "            ConvBlock(in_channels=256,\n",
+    "                      hidden_units=256,\n",
+    "                      out_channels=256,\n",
+    "                      stride=2,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=256,\n",
+    "                      hidden_units=256,\n",
+    "                      out_channels=256,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=256,\n",
+    "                      hidden_units=256,\n",
+    "                      out_channels=256,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=256,\n",
+    "                      hidden_units=256,\n",
+    "                      out_channels=256,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=256,\n",
+    "                      hidden_units=256,\n",
+    "                      out_channels=256,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=256,\n",
+    "                      hidden_units=256,\n",
+    "                      out_channels=256,\n",
+    "                      device=device),\n",
+    "        )\n",
+    "\n",
+    "        self.conv_5 = nn.Sequential(\n",
+    "            ConvBlock(in_channels=512,\n",
+    "                      hidden_units=512,\n",
+    "                      out_channels=512,\n",
+    "                      stride=2,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=512,\n",
+    "                      hidden_units=512,\n",
+    "                      out_channels=512,\n",
+    "                      device=device),\n",
+    "            \n",
+    "            ConvBlock(in_channels=512,\n",
+    "                      hidden_units=512,\n",
+    "                      out_channels=512,\n",
+    "                      device=device),\n",
+    "        )\n",
+    "\n",
+    "        self.end = nn.Sequential(\n",
+    "            nn.AvgPool3d(kernel_size=3),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(in_features=7*7,\n",
+    "                      out_features=10,\n",
+    "                      device=device)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.conv_1(x)\n",
+    "        x = self.conv_2(x)\n",
+    "        x = self.conv_3(x)\n",
+    "        x = self.conv_4(x)\n",
+    "        x = self.conv_5(x)\n",
+    "        return x\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -203,17 +452,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "=================================================================\n",
+       "Layer (type:depth-idx)                   Param #\n",
+       "=================================================================\n",
+       "Resnet18                                 --\n",
+       "├─Sequential: 1-1                        --\n",
+       "│    └─Conv2d: 2-1                       9,472\n",
+       "├─Sequential: 1-2                        --\n",
+       "│    └─MaxPool2d: 2-2                    --\n",
+       "│    └─ConvBlock: 2-3                    --\n",
+       "│    │    └─Sequential: 3-1              74,112\n",
+       "│    └─ConvBlock: 2-4                    --\n",
+       "│    │    └─Sequential: 3-2              74,112\n",
+       "│    └─ConvBlock: 2-5                    --\n",
+       "│    │    └─Sequential: 3-3              74,112\n",
+       "├─Sequential: 1-3                        --\n",
+       "│    └─ConvBlock: 2-6                    --\n",
+       "│    │    └─Sequential: 3-4              295,680\n",
+       "│    └─ConvBlock: 2-7                    --\n",
+       "│    │    └─Sequential: 3-5              295,680\n",
+       "│    └─ConvBlock: 2-8                    --\n",
+       "│    │    └─Sequential: 3-6              295,680\n",
+       "│    └─ConvBlock: 2-9                    --\n",
+       "│    │    └─Sequential: 3-7              295,680\n",
+       "├─Sequential: 1-4                        --\n",
+       "│    └─ConvBlock: 2-10                   --\n",
+       "│    │    └─Sequential: 3-8              1,181,184\n",
+       "│    └─ConvBlock: 2-11                   --\n",
+       "│    │    └─Sequential: 3-9              1,181,184\n",
+       "│    └─ConvBlock: 2-12                   --\n",
+       "│    │    └─Sequential: 3-10             1,181,184\n",
+       "│    └─ConvBlock: 2-13                   --\n",
+       "│    │    └─Sequential: 3-11             1,181,184\n",
+       "│    └─ConvBlock: 2-14                   --\n",
+       "│    │    └─Sequential: 3-12             1,181,184\n",
+       "│    └─ConvBlock: 2-15                   --\n",
+       "│    │    └─Sequential: 3-13             1,181,184\n",
+       "├─Sequential: 1-5                        --\n",
+       "│    └─ConvBlock: 2-16                   --\n",
+       "│    │    └─Sequential: 3-14             4,721,664\n",
+       "│    └─ConvBlock: 2-17                   --\n",
+       "│    │    └─Sequential: 3-15             4,721,664\n",
+       "│    └─ConvBlock: 2-18                   --\n",
+       "│    │    └─Sequential: 3-16             4,721,664\n",
+       "├─Sequential: 1-6                        --\n",
+       "│    └─AvgPool3d: 2-19                   --\n",
+       "│    └─Flatten: 2-20                     --\n",
+       "│    └─Linear: 2-21                      500\n",
+       "=================================================================\n",
+       "Total params: 22,667,124\n",
+       "Trainable params: 22,667,124\n",
+       "Non-trainable params: 0\n",
+       "================================================================="
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchinfo import summary\n",
+    "\n",
+    "resnet18 = Resnet18(in_channels=3,\n",
+    "                    device=device)\n",
+    "\n",
+    "summary(model=resnet18)"
+   ]
   },
   {
    "cell_type": "code",
